2.42: Crash when saving .blend file as an unpriveledged user #4713

Closed
opened 2006-07-17 14:54:37 +02:00 by Jath Palasubramaniam · 3 comments

Group: V 2.42a release
Resolution: Fixed
Category: Windows related

%%%Blender: 2.42 release version
OS: Windows XP Pro SP2

When using blender as an unpriveledged non-admin user, blender crashes whenever I try to save the current project. This is true even trying to save an unedited, default scene with the default filename, "untitled.blend".

On clicking the save button, the normal save dialog box comes up. I am able to select my home directory without any problems ("C:\Documents and Settings\Jath Palasubramaniam\My Documents"). On clicking save, blender pauses for a short while (2-3secs) and then a windows error message is displayed:

"blender.exe has encountered a problem and needs to close."

After dismissing the message, blender then exits immediately. There is no blender error message displayed.

Note however, that despite the crash, blender does successfully save the file. When I reopen blender the .blend file exists and I can open it normally without any problems so it appears the problem occurs just after writing the file to disk.

This problem does not occur when I am logged in as a user with administrative rights. When I installed blender, I installed it logged in as root.

Unfortunately I haven't used a previous version of blender on this computer so I'm not sure if this is a new bug.

Thanks,

Jath Palasubramaniam

%%%

**Group**: V 2.42a release **Resolution**: Fixed **Category**: Windows related %%%Blender: 2.42 release version OS: Windows XP Pro SP2 When using blender as an unpriveledged non-admin user, blender crashes whenever I try to save the current project. This is true even trying to save an unedited, default scene with the default filename, "untitled.blend". On clicking the save button, the normal save dialog box comes up. I am able to select my home directory without any problems ("C:\Documents and Settings\Jath Palasubramaniam\My Documents"). On clicking save, blender pauses for a short while (2-3secs) and then a windows error message is displayed: "blender.exe has encountered a problem and needs to close." After dismissing the message, blender then exits immediately. There is no blender error message displayed. Note however, that despite the crash, blender does successfully save the file. When I reopen blender the .blend file exists and I can open it normally without any problems so it appears the problem occurs just after writing the file to disk. This problem does not occur when I am logged in as a user with administrative rights. When I installed blender, I installed it logged in as root. Unfortunately I haven't used a previous version of blender on this computer so I'm not sure if this is a new bug. Thanks, Jath Palasubramaniam %%%

Changed status to: 'Open'

Changed status to: 'Open'

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#4713
No description provided.