FIX: [ #4713 ] 2.42: Crash when saving .blend file as an unpriveledged user - applied bugfix patch [ #4945 ] from Alex Rainchik - many thanks